@startuml
class Item{
- description
- dueDate
- complete

+ Item()

+ Item(String title, String description)

+ String getDescription()

+ setDescription(String description)

+ Boolean getComplete()

+ setComplete(Boolean complete)

+ String getDueDate()

+ setDueDate(String dueDateString)

}



class ToDoListAppController implements initializable{

- TableColumn<Item, String> description;

- TableColumn<Item, Boolean> complete;

- TableColumn<Item, String> dueDate;

- TableView<Item> table;

- ObservableList<Item> list;

-ObservableList<String> arrayLists;

- TextField titleInput;

- TextField descriptionInput;

- DatePicker datePicker;

- FileChooser file_chooser;

+ initialize(URL url, ResourceBundle rb)

+ addList(ActionEvent ae)

+ removeList(ActionEvent ae)

+ removeAllLists(ActionEvent ae)

+ editList(ActionEvent ae)

+ addItem(ActionEvent ae)

+ removeItem(ActionEvent ae)

+ removeAllItems(ActionEvent ae)

+ editItem(ActionEvent ae)

+ save(ActionEvent ae)

+ load(ActionEvent ae)

 }

 class List{

 -ArrayList<Item> toDoList;
 -String titleList;

 +List();
 +List(String title);

 +getTitleList();
 +setTitleList(String title);
 +verify(String title);
 }

class ToDoListApplication extends Application{
+launch()
}

 Item ---> List
 List ---> ToDoListApplication



@enduml